--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,14 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 0 * * *'  # Täglich um Mitternacht
-  workflow_dispatch:      # Ermöglicht manuelle Ausführung
+    - cron: '0 0 * * *'
+  workflow_dispatch:
+
+# Explizite Berechtigungen für den gesamten Workflow
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -15,11 +21,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: public-repo
+          token: ${{ secrets.GITHUB_TOKEN }}  # Explizites Token für public repo
+          persist-credentials: true
 
       - name: Checkout private repository
         uses: actions/checkout@v4
         with:
-          repository: smart-climate-lab/mobility_harbach  # Hier private Repository-Namen eintragen
+          repository: smart-climate-lab/mobility_harbach  # Ihr private repo name
           token: ${{ secrets.PRIVATE_REPO_TOKEN }}
           path: private-repo
 
@@ -28,22 +36,20 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: |
-          cd private-repo
-          pip install -r requirements.txt  # Falls Sie Abhängigkeiten haben
-
       - name: Generate HTML
         run: |
           cd private-repo
-          python generate_html.py  # Ihr Python-Script
-          cp index.html ../public-repo/index.html  # Passen Sie den Dateinamen an
+          python generate_html.py
+          cp index.html ../public-repo/index.html
 
       - name: Commit and push changes
         run: |
           cd public-repo
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add index.html
           git commit -m "Update HTML content" || echo "No changes to commit"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/smart-climate-lab/dashboard.git
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
