--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,60 +1,38 @@
-name: Generate and Deploy HTML
+name: Upload Images
 
 on:
-  push:
-    branches: [ main ]
   schedule:
     - cron: '0 * * * *'
-  workflow_dispatch:
-
-# Explizite Berechtigungen für den gesamten Workflow
-permissions:
-  contents: write
-  pages: write
-  id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout public repository
-        uses: actions/checkout@v4
-        with:
-          path: public-repo
-          token: ${{ secrets.GITHUB_TOKEN }}  # Explizites Token für public repo
-          persist-credentials: true
+    - name: Checkout public repo
+      uses: actions/checkout@v2
 
-      - name: Checkout private repository
-        uses: actions/checkout@v4
-        with:
-          repository: smart-climate-lab/mobility_harbach  # Ihr private repo name
-          token: ${{ secrets.PRIVATE_REPO_TOKEN }}
-          path: private-repo
+    - name: Checkout private repo
+      uses: actions/checkout@v2
+      with:
+        repository: smart-climate-lab/mobility_harbach
+        token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+        path: private-repo
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+    - name: Run script
+      run: python private-repo/Main_harbach.py
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+    - name: Copy images
+      run: |
+        mkdir -p public-repo/images
+        cp private-repo/images/speedometer.png public-repo/images/
+        cp private-repo/images/crosswalk.png public-repo/images/
 
-      - name: Generate HTML
-        run: |
-          cd private-repo
-          python generate_html.py
-          cp index.html ../public-repo/index.html
-
-      - name: Commit and push changes
-        run: |
-          cd public-repo
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add index.html
-          git commit -m "Update HTML content" || echo "No changes to commit"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/smart-climate-lab/dashboard.git
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Push changes
+      run: |
+        cd public-repo
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "Update images"
+        git push
