--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,11 @@ jobs:
     - name: Checkout public repo
       uses: actions/checkout@v2
 
+    - name: Install dependencies 
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Checkout private repo
       uses: actions/checkout@v2
       with:
