--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,7 @@ jobs:
 
     - name: Install dependencies 
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip pandas
 
     - name: Checkout private repo
       uses: actions/checkout@v2
