--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
 
     - name: Install dependencies 
       run: |
-        python -m pip install --upgrade pip pandas
+        python -m pip install --upgrade pip
+        pip install -r private-repo/requirements.txt
 
     - name: Run script
       run: python private-repo/Main_harbach.py
