--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,20 @@ jobs:
         cp private-repo/Crosswalks.png public-repo/images/
         cp private-repo/Modal_split.png public-repo/images/
 
-    - name: Push changes
+    - name: Push private changes
+      run: |
+        cd private-repo
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "Update images"
+        git push
+
+    - name: Push public changes
       run: |
         cd public-repo
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add images/
+        git add .
         git commit -m "Update images"
         git push
