--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,6 @@ jobs:
         cd public-repo
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
+        git add images/* # Hinzufügen nur der Dateien im images-Verzeichnis
         git commit -m "Update images"
         git push
