--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,18 @@ jobs:
         git add images/* # Hinzufügen nur der Dateien im images-Verzeichnis
         git commit -m "Update images"
         git push
+        
+    - name: Check git status
+      run: |
+        cd public-repo
+        git status
+
+    - name: Push public changes
+      run: |
+        cd public-repo
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add images/* # Hinzufügen nur der Dateien im images-Verzeichnis
+        git status
+        git commit -m "Update images"
+        git push
