--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,37 +24,20 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r private-repo/requirements.txt
-
     - name: Run script
       run: python private-repo/Main_harbach.py
-
+          
     - name: Copy images
       run: |
         mkdir -p public-repo/images
         cp private-repo/speedometer.png public-repo/images/
         cp private-repo/Crosswalks.png public-repo/images/
         cp private-repo/Modal_split.png public-repo/images/
-
     - name: Push public changes
       run: |
         cd public-repo
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add images/* # Hinzufügen nur der Dateien im images-Verzeichnis
-        git commit -m "Update images"
-        git push
-        
-    - name: Check git status
-      run: |
-        cd public-repo
-        git status
-
-    - name: Push public changes
-      run: |
-        cd public-repo
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add images/* # Hinzufügen nur der Dateien im images-Verzeichnis
-        git status
+        git add .
         git commit -m "Update images"
         git push
