--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,8 @@ jobs:
     - name: Push public changes
       run: |
         cd public-repo
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "Update images"
-        git push
+        git add Crosswalks.png Modal_split.png private-repo/ speedometer.png
+        git commit -m "Add images and private-repo directory"
+        git push origin main
+
+
