--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
 name: Upload Images
-
 on:
   schedule:
     - cron: '0 * * * *'
@@ -8,31 +7,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout public repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+      with:
+        path: public-repo
 
     - name: Checkout private repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         repository: smart-climate-lab/mobility_harbach
         token: ${{ secrets.PRIVATE_REPO_TOKEN }}
         path: private-repo
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
+
     - name: Install dependencies 
       run: |
         python -m pip install --upgrade pip
         pip install -r private-repo/requirements.txt
-    - name: Run script
-      run: python private-repo/Main_harbach.py ../public-repo/images
-          
-    - name: Push public changes
+
+    - name: Run script and generate images
+      run: python private-repo/Main_harbach.py public-repo/images
+
+    - name: Commit and push changes
       run: |
         cd public-repo
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git add .
-        git commit -m "Update images"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git add images
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update images"
         git push
-
