--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
 
     - name: Checkout public repository
       uses: actions/checkout@v2
+      with:
+         repository: smart-climate-lab/public-repo
+         token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+         path: public-repo
 
     - name: Copy plot to public repository
       run: |
