--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,42 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout private repo
-      uses: actions/checkout@v4
-      with:
-        repository: smart-climate-lab/mobility_harbach
-        token: ${{ secrets.PRIVATE_REPO_TOKEN }}
-        path: private-repo
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
-    - name: Install dependencies 
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r private-repo/requirements.txt
+        pip install pandas matplotlib
 
-    - name: Run script and generate images
-      run: python private-repo/Main_harbach.py
+    - name: Generate plot
+      run: python generate_plot.py
 
     - name: List files
       run: ls -la
-
-    - name: Checkout public repository
-      uses: actions/checkout@v2
-      with:
-         repository: smart-climate-lab/public-repo
-
-    - name: Copy plot to public repository
-      run: |
-        cp CrossingEvents.png public-repo/
-
-    - name: Commit and push plot
-      run: |
-        git config --global user.name 'smart-climate-lab'
-        git config --global user.email 'patrick.weiss.klagenfurt@gmail.com'
-        git add CrossingEvents.png
-        git commit -m "Add generated plot"
-        git push
