--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,30 +9,53 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout private repo
+      uses: actions/checkout@v4
+      with:
+        repository: smart-climate-lab/mobility_harbach
+        token: ${{ secrets.PRIVATE_REPO_TOKEN }}
+        path: private-repo
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.x'
 
-    - name: Install dependencies
+    - name: Install dependencies 
       run: |
         python -m pip install --upgrade pip
-        pip install pandas matplotlib
+        pip install -r private-repo/requirements.txt
 
-    - name: Generate plot
+    - name: Run script and generate images
       run: python private-repo/Main_harbach.py
 
     - name: List files
       run: ls -la
-      
+
     - name: Verify plot generation
       run: |
-        if [ -f "CrossingEvents.png" ]; then
+        if [ -f "Test.png" ]; then
           echo "Plot generated successfully"
         else
           echo "Plot generation failed"
           exit 1
         fi
+
+    - name: Checkout public repository
+      uses: actions/checkout@v2
+      with:
+         repository: smart-climate-lab/public-repo
+
+    - name: Copy plot to public repository
+      run: |
+        cp CrossingEvents.png public-repo/
+
+    - name: Commit and push plot
+      run: |
+        git config --global user.name 'smart-climate-lab'
+        git config --global user.email 'patrick.weiss.klagenfurt@gmail.com'
+        git add CrossingEvents.png
+        git commit -m "Add generated plot"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}      
